Mise en place de NHibernate

--- a/QuatriemeApplication/QuatriemeApplication.csproj
+++ b/QuatriemeApplication/QuatriemeApplication.csproj
@@ -33,8 +33,19 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,7 +54,32 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Civilite.cs">
+      <DependentUpon>GestContact.tt</DependentUpon>
+    </Compile>
     <Compile Include="Entities\Civilite.cs" />
+    <Compile Include="GestContact.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>GestContact.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="GestContact.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>GestContact.tt</DependentUpon>
+    </Compile>
+    <Compile Include="GestContact.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>GestContact.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="InformationContact.cs">
+      <DependentUpon>GestContact.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\Civilite.cs" />
+    <Compile Include="Personne.cs">
+      <DependentUpon>GestContact.tt</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CiviliteRepository.cs" />
@@ -51,9 +87,30 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <EntityDeploy Include="GestContact.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>GestContact.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="GestContact.edmx.diagram">
+      <DependentUpon>GestContact.edmx</DependentUpon>
+    </None>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="GestContact.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>GestContact.edmx</DependentUpon>
+      <LastGenOutput>GestContact.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="GestContact.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>GestContact.edmx</DependentUpon>
+      <LastGenOutput>GestContact.cs</LastGenOutput>
+    </Content>
     <Content Include="init.sql" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
