--- a/Cookbook/packages.config
+++ b/Cookbook/packages.config
@@ -20,4 +20,5 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
+  <package id="routedebugger" version="2.1.5" targetFramework="net461" />
 </packages>
