Ajout de la gestion de l'authentification

--- a/Cookbook.DTO/Cookbook.DTO.csproj
+++ b/Cookbook.DTO/Cookbook.DTO.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Accounts\AccountDTO.cs" />
+    <Compile Include="Accounts\ProfileDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
