--- a/Cookbook/Web.config
+++ b/Cookbook/Web.config
@@ -9,12 +9,21 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="BaseApiAddress" value="http://localhost:51266" />
+    <add key="BaseApiAddress" value="http://localhost:8086" />
     <add key="RouteDebugger:Enabled" value="true" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
+    <roleManager enabled="true" cacheRolesInCookie="true" defaultProvider="CustomRoleProvider">
+      <providers>
+        <clear />
+        <add name="CustomRoleProvider" type="Cookbook.Security.CustomRoleProvider" />
+      </providers>
+    </roleManager>
+        <authentication mode="Forms">
+            <forms loginUrl="~/Login" />
+        </authentication>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
